@@ -576,6 +576,7 @@ JLIB_RULES_SETTING_NOTES_ITEM="1. If you change the setting, it will apply to th
 JLIB_RULES_SETTINGS_DESC="Manage the permission settings for the user groups below. See notes at the bottom."
 
 JLIB_UNKNOWN="Unknown"
+JLIB_UPDATER_ERROR_COLLECTION_FOPEN="The PHP allow_url_fopen setting is disabled. This setting must be enabled for the updater to work."
 JLIB_UPDATER_ERROR_COLLECTION_OPEN_URL="Update: :Collection: Could not open %s"
 JLIB_UPDATER_ERROR_EXTENSION_OPEN_URL="Update: :Extension: Could not open %s"
 JLIB_USER_ERROR_AUTHENTICATION_LIBRARIES="JAuthentication: :__construct: Could not load authentication libraries."
