@@ -55,6 +55,13 @@ class JUpdater extends JAdapter {
 	 * @return boolean If there are updates or not
 	 */
 	public function findUpdates($eid=0) {
+		// Check if fopen is allowed
+		$result = ini_get('allow_url_fopen');
+		if (empty($result)) {
+			JError::raiseWarning('101', JText::_('JLIB_UPDATER_ERROR_COLLECTION_FOPEN'));
+			return false;
+		}
+
 		$dbo = $this->getDBO();
 		$retval = false;
 		// Push it into an array
